--- a/index.html
+++ b/index.html
@@ -27,6 +27,6 @@
 
             <tr>
                 <td colspan="2" align="left">
-                <p>Jika belum punya akun <a href="file:///home/pc-lab-2/Downloads/from%20vera2.html" target="_blank">klik here</a></p>
+                <p>Jika belum punya akun <a href="file:///home/pc-lab-2/Downloads/from vera2.html" target="_blank">klik here</a></p>
                 <input type="submit" name="submit" value="login">
                 </td>
